overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 :root {
   --background-light: radial-gradient(circle at center, #e0e0e0, #f5f5f5);
-  --background-dark: radial-gradient(circle at center, #3b3b3b, #1a1a1a);
+  --background-dark: radial-gradient(
+    circle at center,
+    #203a43,
+    #2c5364,
+    #0f2027
+  );
   --card-bg-light: rgb(0 0 0 / 18%);
   --card-bg-dark: rgba(0, 0, 0, 0.3);
   --text-light: #000;
@@ -17,7 +22,7 @@ body {
   font-family: "Orbitron", sans-serif;
   transition: background 0.5s ease;
   background: var(--background-dark);
-  background: radial-gradient(circle at center, #203a43, #2c5364, #0f2027);
+  overflow-y: hidden;
 }
 
 .clock-container {
